--- a/assets/style.css
+++ b/assets/style.css
@@ -27,7 +27,7 @@ ul {
 p {
     text-align: center;
     font-size: 30px;
-  }.card {
+  }.card
     width: 80%;
     margin: 40px auto;
     border: 5px solid gray;
